--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MessageMe</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>MessageMe</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  
+</head>
+<body>
 
-  <body>
-    <%= yield %>
-  </body>
+    <div class="ui small inverted menu">
+        <div class="ui container">
+            <a class=" item">
+                Chat Room
+            </a>
+            <a class="item">
+                Messages
+            </a>
+            <div class="right menu">
+                <div class="ui dropdown item">
+                Account <i class="dropdown icon"></i>
+                <div class="menu">
+                    <a class="item">Log in</a>
+                    <a class="item">Log out</a>
+                    <a class="item">Sign up</a>
+                </div>
+                </div>
+                <div class="item">
+                    <div class="ui primary button">Sign Up</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui container">
+        <%= yield %>
+    </div>
+</body>
 </html>
